hosted video on ios fixed

--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -128,6 +128,12 @@ $hosted-video-height: 540px;
     display: none;
 }
 
+.hosted__banner .hosted-tone-btn,
+.hosted-tone-btn:focus,
+.hosted-tone-btn:hover {
+    color:  #333333;
+}
+
 .hosted-page--bright {
     .hosted__banner .hosted-tone-btn,
     .hosted-tone-btn:focus,
